--- a/src/routes/emissiontracker.css
+++ b/src/routes/emissiontracker.css
@@ -340,13 +340,13 @@
 }
 
 .delete-icon {
-  color: #ff4d4f; /* Red color for delete */
+  color: #ff4d4f; 
   cursor: pointer;
   font-size: 1.2rem;
   transition: color 0.3s ease;
 }
 
 .delete-icon:hover {
-  color: #d9363e; /* Darker red on hover */
-  transform: scale(1.2); /* Slight scale-up on hover */
+  color: #d9363e; 
+  transform: scale(1.2);
 }
